--- a/libjava/ChangeLog
+++ b/libjava/ChangeLog
@@ -1,3 +1,14 @@
+2000-09-08  Tom Tromey  <tromey@cygnus.com>
+
+	* gnu/gcj/convert/BytesToUnicode.java (getDefaultDecoder): Let
+	default decoder use iconv.
+	* gnu/gcj/convert/UnicodeToBytes.java (getDefaultEncoder):
+	Let default encoder use iconv.
+	* configure: Rebuilt.
+	* configure.in: Check for nl_langinfo and <langinfo.h>.
+	* java/lang/natSystem.cc (file_encoding): New function.
+	(DEFAULT_FILE_ENCODING): Define to file_encoding() if possible.
+
 2000-09-10  Alexandre Oliva  <aoliva@redhat.com>
 
 	* acinclude.m4: Simplify the tests for CC and CXX.
