* varasm.c (make_decl_rtl): Restore leading star on 	DECL_ASSEMBLER_NAME set for decls with an asmspec. 	* gcc.dg/asm-names.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36309 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-10  Zack Weinberg  <zack@wolery.cumb.org>
+
+	* gcc.dg/asm-names.c: New test.
+
 2000-09-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/cpp/tr-warn6.c: New test
