--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-11  Bernd Schmidt  <bernds@redhat.co.uk>
+
+	* reload.c (regno_clobbered_p): Fix thinko in previous change.
+
 2000-09-10  Stephane Carrez  <Stephane.Carrez@worldnet.fr>
 
 	* gcc.1: Document 68hc11 specific options.
