--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-11  Geoff Keating  <geoffk@cygnus.com>
+
+	* alias.c (memrefs_conflict_p): An ADDRESSOF does conflict, sorry.
+
 2000-09-11  Bernd Schmidt  <bernds@redhat.co.uk>
 
 	* reload.c (regno_clobbered_p): Fix thinko in previous change.
