* integrate.c: Fix formatting.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36319 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-11  Kazu Hirata  <kazu@hxi.com>
+
+	* integrate.c: Fix formatting.
+
 2000-09-11  Geoff Keating  <geoffk@cygnus.com>
 
 	* alias.c (memrefs_conflict_p): An ADDRESSOF does conflict, sorry.
