* gcc.c (main): Don't warn about unused -B prefixes         (unused_prefix_warnings): remove
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36320 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-11  DJ Delorie  <dj@redhat.com>
+
+	* gcc.c (main): Don't warn about unused -B prefixes
+	(unused_prefix_warnings): remove
+
 2000-09-11  Kazu Hirata  <kazu@hxi.com>
 
 	* integrate.c: Fix formatting.
