--- a/gcc/install.texi
+++ b/gcc/install.texi
@@ -384,16 +384,17 @@ directory.
 
 @samp{LANGUAGES=c} specifies that only the C compiler should be
 compiled.  The makefile normally builds compilers for all the supported
-languages; currently, C, C++ and Objective C.  However, C is the only
-language that is sure to work when you build with other non-GNU C
-compilers.  In addition, building anything but C at this stage is a
-waste of time.
+languages; currently, C, C++, Objective C, Java, FORTRAN, and CHILL.
+However, C is the only language that is sure to work when you build with
+other non-GNU C compilers.  In addition, building anything but C at this
+stage is a waste of time.
 
 In general, you can specify the languages to build by typing the
 argument @samp{LANGUAGES="@var{list}"}, where @var{list} is one or more
-words from the list @samp{c}, @samp{c++}, and @samp{objective-c}.  If
-you have any additional GNU compilers as subdirectories of the GNU CC
-source directory, you may also specify their names in this list.
+words from the list @samp{c}, @samp{c++}, @samp{objective-c},
+@samp{java}, @samp{f77}, and @samp{CHILL}.  If you have any additional
+GNU compilers as subdirectories of the GNU CC source directory, you may
+also specify their names in this list.
 
 Ignore any warnings you may see about ``statement not reached'' in
 @file{insn-emit.c}; they are normal.  Also, warnings about ``unknown
