* gcc.dg/pragma-align.c: New test.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36323 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2000-09-11  Robert Lipe  <robertl@sco.com>
+	
+	* gcc.dg/pragma-align.c: New test.
+
 2000-09-11  Nathan Sidwell  <nathan@codesourcery.com>
 
 	* g++.old-deja/g++.pt/explicit82.C: New test.
