* combine.c (simplify_if_then_else): Don't convert a == b ? b : a 	to a if the comparison is floating mode and not -ffast-math. 	* simplify-rtx.c (simplify_ternary_operation): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36326 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-11  Jakub Jelinek  <jakub@redhat.com>
+
+	* combine.c (simplify_if_then_else): Don't convert a == b ? b : a
+	to a if the comparison is floating mode and not -ffast-math.
+	* simplify-rtx.c (simplify_ternary_operation): Likewise.
+
 Mon Sep 11 20:07:48 2000  J"orn Rennecke <amylaar@redhat.co.uk>
 
 	* sh.h (INITIALIZE_TRAMPOLINE): Remove stray call to
