* gcc.c-torture/execute/20000910-1.c: New test. * gcc.c-torture/execute/20000910-2.c: Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36328 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2000-09-11  Alexandre Oliva  <aoliva@redhat.com>
+
+	* gcc.c-torture/execute/20000910-1.c: New test.
+	* gcc.c-torture/execute/20000910-2.c: Likewise.
+
 2000-09-11  Robert Lipe  <robertl@sco.com>
 	
 	* gcc.dg/pragma-align.c: New test.
