* config/h8300/h8300.md (movstrictqi): Changed constraint modifier         on operand 0 to '+'.         (movstricthi): Likewise.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@36337 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2000-09-11  Matthew Hiller  <hiller@redhat.com>
+
+	* config/h8300/h8300.md (movstrictqi): Changed constraint modifier
+	on operand 0 to '+'.
+	(movstricthi): Likewise.
+
 2000-09-12  Michael Hayes  <mhayes@cygnus.com>
 
 	* loop.h (LOOP_IVS): New macro.
