--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -153,7 +153,7 @@
 }")
 
 (define_insn "movstrictqi"
-  [(set (strict_low_part (match_operand:QI 0 "general_operand_dst" "=r,r,r,r"))
+  [(set (strict_low_part (match_operand:QI 0 "general_operand_dst" "+r,r,r,r"))
 			 (match_operand:QI 1 "general_operand_src" "I,r,n,m"))]
   ""
   "@
@@ -217,7 +217,7 @@
 }")
 
 (define_insn "movstricthi"
-  [(set (strict_low_part (match_operand:HI 0 "general_operand_dst" "=r,r,r,r"))
+  [(set (strict_low_part (match_operand:HI 0 "general_operand_dst" "+r,r,r,r"))
 			 (match_operand:HI 1 "general_operand_src" "I,r,i,m"))]
   ""
   "@
